--- a/measurement/views/inh_sale_order.xml
+++ b/measurement/views/inh_sale_order.xml
@@ -90,6 +90,10 @@
                     <span>
                         <field name="premium_prod"/>
                     </span>
+                    <label for="global_discount" string="Discount"/>
+                    <span>
+                        <field name="global_discount"/>
+                    </span>
                     <br/>
                     <group>
                         <field name="product_line_ids">
@@ -99,6 +103,8 @@
                                 <field name="product_type"/>
                                 <field name="m3_h"/>
                                 <field name="prod_capacity" widget="percent"/>
+                                <field name="sale_price"/>
+<!--                                <field name="discounted_price"/>-->
                                 <field name="already_link" invisible="1"/>
                                 <button name="action_add_to_order_line"
                                 string="Add"
