--- a/measurement/views/res_partner.xml
+++ b/measurement/views/res_partner.xml
@@ -1,13 +1,13 @@
 <odoo>
     <!-- Tree/List View -->
-    <record id="view_res_partner_form_inherit_custom" model="ir.ui.view">
-        <field name="name">res.partner.form.inherit.custom</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='state_id']" position="after">
-                <field name="postal_id" placeholder="Postal" domain="[('id', 'in', postal_id_domain)]"/>
-            </xpath>
-        </field>
-    </record>
+<!--    <record id="view_res_partner_form_inherit_custom" model="ir.ui.view">-->
+<!--        <field name="name">res.partner.form.inherit.custom</field>-->
+<!--        <field name="model">res.partner</field>-->
+<!--        <field name="inherit_id" ref="base.view_partner_form"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//field[@name='state_id']" position="after">-->
+<!--                <field name="postal_id" placeholder="Postal" domain="[('id', 'in', postal_id_domain)]"/>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
 </odoo>
