--- a/measurement/views/res_partner.xml
+++ b/measurement/views/res_partner.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='state_id']" position="after">
-                <field name="postal_id" placeholder="Postal" domain="[('id', 'in', postal_id_domain)]"/>
+                <field name="postal_id" placeholder="Postal"/>
             </xpath>
         </field>
     </record>
